@@ -1,5 +1,5 @@
 <b>Searching for entries</b><br>
-The entered search string will be matched against all file and directory names recursively from the current path and below.
+The entered search string will be matched against all file, directory and author names recursively from the current path and below.
 <br>
 Note that the matching is <i>case sensitive</i>!
 <br>
