@@ -9,7 +9,14 @@ public class SearchHitDecoratorTagTest extends TestCase {
     assertEquals("this is a <span class=\"hit\">test</span>!", SearchHitDecoratorTag.decorate("hit",
         SearchEntriesController.SearchType.TEXT.name(), "test", "this is a test!"));
 
+    assertEquals("<span class=\"hit\">jesper</span>", SearchHitDecoratorTag.decorate("hit",
+        SearchEntriesController.SearchType.TEXT.name(), "jesper", "jesper"));
+
+    assertEquals("this is a test!", SearchHitDecoratorTag.decorate("hit",
+        SearchEntriesController.SearchType.TEXT.name(), "not-found", "this is a test!"));
+
     assertEquals("this is a test!", SearchHitDecoratorTag.decorate("hit",
         SearchEntriesController.SearchType.CAMELCASE.name(), "test", "this is a test!"));
+
   }
 }
